<resources>
    <string name="app_name">flagmentDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_setting">设置</string>
    <string name="title">我的主页</string>
</resources>
