<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@color/text_topbar"
            android:text="@string/title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/div_white"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/bg_white"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_channel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_menu_alert"
            android:gravity="center"
            android:background="@drawable/tab_menu_bg"
            android:drawableTop="@drawable/tab_menu_channel"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_menu_profile"
            android:drawableTop="@drawable/tab_menu_message"
            android:textColor="@drawable/tab_menu_text"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_better"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_menu_pay"
            android:drawableTop="@drawable/tab_menu_better"
            android:textColor="@drawable/tab_menu_text"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab_menu_setting"
            android:drawableTop="@drawable/tab_menu_setting"
            android:textColor="@drawable/tab_menu_text"
            android:background="@drawable/tab_menu_bg"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/div_white"
        android:layout_above="@id/ly_tab_bar" />

    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar" />
</RelativeLayout>

